Commit Dev du 21-01-2022 15H24

--- a/articles.html
+++ b/articles.html
@@ -50,8 +50,8 @@
         </section>
         <section class="message"> COVID - Messages concernant les Conditions sanitaires</section>
     </main>
-    <footer style="display:flex;">
-        <section class="liens_pratiques"style="background-color:rgb(198, 205, 211);display:flex;">
+    <footer>
+        <section class="liens_pratiques">
             <ul>
                 <li>Achats sans soucis</li>
                 <li>Articles à petits prix</li>
