--- a/index.html
+++ b/index.html
@@ -48,14 +48,14 @@
         <section class="message"> COVID - Messages concernant les Conditions sanitaires</section>
     </main>
     <footer>
-        <section class="liens_pratiques" style="background-color:rgb(198, 205, 211);display:flex;">
+        <section class="liens_pratiques">
             <ul>
                 <li>Achats sans soucis</li>
                 <li>Articles à petits prix</li>
                 <li>Paiements sécurisés</li>
                 <li>Livraison Valenciennoise</li>
             </ul>
-        <section class="liens_generaux" style="background-color:rgb(198, 205, 211);display:flex;">
+        <section class="liens_generaux">
             <ul>
                 <li>Accueil</li>
                 <li>Catalogue</li>
@@ -65,7 +65,7 @@
                 <li>Contact</li>
             </ul>
         </section>
-        <section class="legal"style="background-color:rgb(198, 205, 211);display:flex;flex-direction:column;">
+        <section class="legal">
             <H6>Mentions légales / Conditions générales d'utilisation et de vente</H6>
         </section>
     </footer>
