Commit dev du 21-01-2022

--- a/articles.html
+++ b/articles.html
@@ -9,32 +9,35 @@
 </head>
 <body>
     <header>
-        <nav class="logo_choix" style="background-color:rgb(198, 205, 211);">
-           <div style="display:block;text-align:left;">
+        <nav class="logo_choix">
             <div>
-                <span>Prixba</span><image src ="./assets/img/soleil.png" alt="logo_prixba" width="60px" height="60px" ></image>
-               Tous vos besoins à petits prix dans le Valenciennois
+                    <ul>
+                        <li><span>Prixba</span><image src ="./assets/img/logo_color.png" alt="logo_prixba" width="60px" height="60px" ></image></li>
+                        <li><h2>Tous vos besoins à petits prix dans le Valenciennois</h2></li>
+                    </ul>
             </div>
 
-            <ul style="display:flex;flex-direction: row;margin:0px 2px 0px 2px ;">
+            <ul>
                 <li>Choix et commandes des articles</li>
                 <li>Retraits des articles</li>
                 <li>Paiements des articles</li>
             </ul>   
-                
-            </div>
-
-
         </nav>
-        <nav class="cherche_choix" style="display:flex;align-items: center ;background-color:navy;">
-            <select style="display:block;align-items: center;">
-                <optgroup></optgroup>
-                <option value="">Catégories</option>
-                <option value="">Bricolage</option>
-                <option value="">Cuisine</option>
-                <option value="">Multimédia</option>
-            </select>
-            <ul style="display:flex;flex-direction: row;margin:0px 2px 0px 2px ;color: linen;">
+        <nav class="cherche_choix">
+            <ul>
+               <li> <select>
+                        <optgroup></optgroup>
+                        <option value="">Catégories</option>
+                        <option value="">Bricolage</option>
+                        <option value="">Cuisine</option>
+                        <option value="">Multimédia</option>
+                    </select>
+                </li>
+                <li><input type="text" >
+                    <button class="button button1">Rechercher</button>
+                </li> 
+            </ul>
+            <ul>
                 <li>Catalogue</li>
                 <li>Questions fréquentes</li>
                 <li>Connexions</li>
@@ -58,11 +61,14 @@
                 <li>Paiements sécurisés</li>
                 <li>Livraison Valenciennoise</li>
             </ul>
+        </section>
         <section class="liens_generaux">
             <ul>
                 <li>Accueil</li>
-                <li>Catalogue</li>
+                <li>Catalogue</li> 
                 <li>Questions fréquentes</li>
+            </ul>
+            <ul>
                 <li>Première visite (page informative pour les premier visiteur)</li>
                 <li>Livraison/Retrait</li>
                 <li>Contact</li>
